--- a/.gitignore
+++ b/.gitignore
@@ -10,7 +10,7 @@
 #########################################################
 /scripts/heroku/Dockerfile
 /scripts/heroku/heroku.yml
-
+BASH_ENV
 
 
 #########################################################
