--- a/.gitignore
+++ b/.gitignore
@@ -4,7 +4,6 @@
 *.log*
 
 
-
 #########################################################
 # SCRIPTS
 #########################################################
@@ -20,6 +19,11 @@ TAG
 /src/archivos
 
 
+
+#########################################################
+# IDES
+#########################################################
+.vscode
 
 
 #########################################################
