--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -25,6 +25,8 @@ executors:
   ejecutor-base:
     machine:
       enabled: true
+      environment:
+        CIRCLE_SHA1_SHORT: $(echo $CIRCLE_SHA1 | cut -c -7)
     working_directory: ~/proyect
 
 ##################################################################
