--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -27,7 +27,7 @@ executors:
     machine:
       enabled: true
     environment:
-      CIRCLE_SHA1_SHORT: echo ${CIRCLE_SHA1:0:7}
+      CIRCLE_SHA1_SHORT: $(echo $${CIRCLE_SHA1:0:7})
     working_directory: ~/proyect
 
 ##################################################################
