intentando compilar el codigo python

--- a/scripts/docker/ambiente.env
+++ b/scripts/docker/ambiente.env
@@ -1,24 +1,26 @@
 # PUBLICAS
 
-export DOCKER_USER=${DOCKER_USER:-brianwolf94}
-export DOCKER_TOKEN=${DOCKER_TOKEN:-64f0e37f-eb5a-4072-8b5b-a1a2b7e7b7cf}
+DOCKER_USER=${DOCKER_USER:-brianwolf94}
+DOCKER_TOKEN=${DOCKER_TOKEN:-64f0e37f-eb5a-4072-8b5b-a1a2b7e7b7cf}
 
 
 # PRIVADAS
 
-export DOCKER_NOMBRE_IMAGEN=circleci
-export DOCKER_NAMESPACE=brianwolf94
-export DOCKER_REGISTRY=docker.io
+DOCKER_NOMBRE_IMAGEN=circleci
+DOCKER_NAMESPACE=brianwolf94
+DOCKER_REGISTRY=docker.io
 
-export DOCKER_ARCHIVO_ARGUMENTOS=./docker/env/argumentos.env
-export DOCKER_ARCHIVO_AMBIENTE=./docker/env/ambiente.env
+DOCKER_ARCHIVO_ARGUMENTOS=./docker/env/argumentos.env
+DOCKER_ARCHIVO_AMBIENTE=./docker/env/ambiente.env
 
-export DOCKER_DOCKERFILE=./docker/Dockerfile
+DOCKER_DOCKERFILE=./docker/Dockerfile
 
-export CIRCLE_SHA1_SHORT=${CIRCLE_SHA1:0:7}
-export DOCKER_TAG=${CIRCLE_SHA1_SHORT:-local}
+CIRCLE_SHA1_SHORT=${CIRCLE_SHA1:0:7}
+CIRCLE_SHA1_SHORT=${CIRCLE_SHA1_SHORT:local}
 
-export DOCKER_NETWORK=docker-red
+DOCKER_TAG=${DOCKER_TAG:-local}
 
-export DOCKER_PUERTO_INTERNO=5000
-export DOCKER_PUERTO_EXTERNO=5000
+DOCKER_NETWORK=docker-red
+
+DOCKER_PUERTO_INTERNO=5000
+DOCKER_PUERTO_EXTERNO=5000
