--- a/scripts/python/ambiente.env
+++ b/scripts/python/ambiente.env
@@ -1,3 +1,6 @@
 PYTHON_VERSION=3.8
-CARPETA_ENV=src/env
-CARPETA_REQUIREMENTS=requirements.txt
+
+CARPETA_CODIGO=src
+CARPETA_ENV=$CARPETA_CODIGO/env
+CARPETA_REQUIREMENTS=$CARPETA_CODIGO/requirements.txt
+CARPETA_COMPILADO=dist
