--- a/scripts/docker/ambiente.env
+++ b/scripts/docker/ambiente.env
@@ -18,7 +18,7 @@ DOCKER_DOCKERFILE=./docker/Dockerfile
 CIRCLE_SHA1_SHORT=${CIRCLE_SHA1:0:7}
 CIRCLE_SHA1_SHORT=${CIRCLE_SHA1_SHORT:local}
 
-DOCKER_TAG=${DOCKER_TAG:-local}
+DOCKER_TAG=${CIRCLE_SHA1_SHORT:-local}
 
 DOCKER_NETWORK=docker-red
 
