esperemos que funcione

--- a/scripts/heroku-docker/Dockerfile.template
+++ b/scripts/heroku-docker/Dockerfile.template
@@ -1,7 +1,7 @@
+FROM $DOCKER_NAMESPACE/$DOCKER_NOMBRE_IMAGEN:$DOCKER_TAG
 CMD gunicorn \
     -b ${PYTHON_HOST}:$PORT \
     --reload \
     --workers=${PYTHON_GUNICORN_WORKERS} \
     --worker-connections=${PYTHON_GUNICORN_CONNECTIONS} \
     ${PYTHON_NOMBRE_APP}:${PYTHON_NOMBRE_FUNCION_APP}
-
