actualizo script de heroku

--- a/scripts/heroku-docker/Dockerfile.template
+++ b/scripts/heroku-docker/Dockerfile.template
@@ -1,7 +1,7 @@
 FROM $DOCKER_NAMESPACE/$DOCKER_NOMBRE_IMAGEN:$DOCKER_TAG
 CMD gunicorn \
-    -b ${PYTHON_HOST}:$PORT \
+    -b ${DOLAR}PYTHON_HOST:${DOLAR}PORT \
     --reload \
-    --workers=${PYTHON_GUNICORN_WORKERS} \
-    --worker-connections=${PYTHON_GUNICORN_CONNECTIONS} \
-    ${PYTHON_NOMBRE_APP}:${PYTHON_NOMBRE_FUNCION_APP}
+    --workers=${DOLAR}PYTHON_GUNICORN_WORKERS \
+    --worker-connections=${DOLAR}PYTHON_GUNICORN_CONNECTIONS \
+    ${DOLAR}PYTHON_NOMBRE_APP:${DOLAR}PYTHON_NOMBRE_FUNCION_APP
