--- a/docker/config/ambiente.env
+++ b/docker/config/ambiente.env
@@ -1,6 +1,8 @@
+# UNICORN
 PYTHON_GUNICORN_WORKERS=1
 PYTHON_GUNICORN_CONNECTIONS=1000
 
+# APP
 NIVEL_LOGS=INFO
 DIRECTORIO_LOGS=logs/
 DIRECTORIO_RESOURCES=resources/
