--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -1,4 +1,4 @@
-FROM python:3.8
+FROM python:3.8.3-slim
 
 ARG TAG=local
 
@@ -9,7 +9,7 @@ WORKDIR /usr/src/
 ENV VERSION=${TAG}
 
 ENV PYTHON_HOST=0.0.0.0
-ENV PYTHON_PORT=5000
+ENV PYTHON_PORT=80
 ENV PYTHON_GUNICORN_WORKERS=1
 ENV PYTHON_GUNICORN_CONNECTIONS=1000
 ENV PYTHON_NOMBRE_APP=app
