--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -36,7 +36,7 @@ jobs:
   
   creacion_de_docker:
     executor: ejecutor-base
-    enviroment:
+    environment:
       - DOCKER_TAG: ${CIRCLE_SHA1:0:7}
     steps:
       - attach_workspace:
