funciona el codigo

--- a/src_BK/.gitignore
+++ b/src_BK/.gitignore
@@ -1,13 +1,16 @@
 # APP
-produce/
+logs/
+
 
 # IDES
 .vscode/
+
 
 # PYTHON
 
 # Byte-compiled / optimized / DLL files
 __pycache__/
+*.py[cod]
 *$py.class
 
 # C extensions
@@ -130,3 +133,4 @@ dmypy.json
 
 # Pyre type checker
 .pyre/
+
