--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -1,19 +1,17 @@
 FROM python:3.8.3-slim
 
-ARG TAG=local
+ARG ARG_VERSION=local
 
-WORKDIR /usr/src/
+WORKDIR /lobezzzno
 
 
 # VARIABLES PREDEFINIDAS
-ENV VERSION=${TAG}
+ENV VERSION=${ARG_VERSION}
 
 ENV PYTHON_HOST=0.0.0.0
 ENV PYTHON_PORT=80
 ENV PYTHON_GUNICORN_WORKERS=1
 ENV PYTHON_GUNICORN_CONNECTIONS=1000
-ENV PYTHON_NOMBRE_APP=app
-ENV PYTHON_NOMBRE_FUNCION_APP=app
 
 
 # EJECUCION
@@ -22,7 +20,7 @@ CMD gunicorn \
     --reload \
     --workers=${PYTHON_GUNICORN_WORKERS} \
     --worker-connections=${PYTHON_GUNICORN_CONNECTIONS} \
-    ${PYTHON_NOMBRE_APP}:${PYTHON_NOMBRE_FUNCION_APP}
+    app:app
 
 EXPOSE ${PYTHON_PORT}
 
@@ -35,14 +33,15 @@ RUN pip install -r requirements.txt
 RUN rm requirements.txt
 
 
+# RECURSOS
+COPY ./src/consume ./consume
+
+
 # COMPILACION
-COPY ./src/apps ./src/apps
+COPY ./src/logic ./src/logic
 COPY ./src/app.py ./src
+
 
 RUN python -m compile -b -f -o ./dist ./src
 RUN mv -f ./dist/src/* .
-
-COPY ./src/resources ./resources
-COPY ./src/config ./config
-
 RUN rm -fr ./src ./dist
