--- a/docker/config/ambiente.env
+++ b/docker/config/ambiente.env
@@ -1,8 +1,11 @@
-# UNICORN
+# PYTHON
+VERSION=local
+PYTHON_HOST=0.0.0.0
+PYTHON_PORT=80
 PYTHON_GUNICORN_WORKERS=1
 PYTHON_GUNICORN_CONNECTIONS=1000
 
 # APP
 NIVEL_LOGS=INFO
-DIRECTORIO_LOGS=logs/
-DIRECTORIO_RESOURCES=resources/
+DIRECTORIO_LOGS=produce/logs
+DIRECTORIO_TEMP=/tmp
