--- a/src/consume/config/variables.env
+++ b/src/consume/config/variables.env
@@ -1,7 +1,11 @@
+# PYTHON
 VERSION=local
-PYTHON_HOST=localhost
+PYTHON_HOST=0.0.0.0
 PYTHON_PORT=5000
+PYTHON_GUNICORN_WORKERS=1
+PYTHON_GUNICORN_CONNECTIONS=1000
 
+# APP
 NIVEL_LOGS=INFO
 DIRECTORIO_LOGS=produce/logs
 DIRECTORIO_TEMP=/tmp
